@@ -4889,4 +4889,7 @@
 /(02-)?[0-9]{3}-[0-9]{3}/
     02-123-123
 
+/^(a(?2))(b)(?1)/
+    abbab\=find_limits 
+
 # End of testinput6
